--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <b><h3>About</h3></b>
-
+   
+   
+//About
     <p> 
         My name is Tokelo . I have a passion for all things technology and design, from software engineering to UI/UX.
         
